# ChangeLog for sys-kernel/dracut
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*dracut-007-r1 (16 Aug 2010)
*dracut-006-r2 (16 Aug 2010)

  16 Aug 2010; Amadeusz Żołnowski <aidecoe@aidecoe.name> +dracut-007-r1.ebuild,
  +dracut-006-r2.ebuild, -dracut-006-r1.ebuild, -dracut-007.ebuild,
  dracut-9999.ebuild:
  Removed masked dependencies in release ebuilds and fixed other QA warnings
  in all ebuilds.  Added warning about dhcp-4 not working with QEMU.  Ebuilds
  with QA warnings (except of 9999) were removed.

*dracut-007 (09 Aug 2010)

  09 Aug 2010; Amadeusz Żołnowski <aidecoe@aidecoe.name> +dracut-007.ebuild,
  +files/dracut-007-dm-udev-rules.patch,
  +files/dracut-007-multipath-udev-rules.patch, metadata.xml:
  Version bump.  Ebuild is copied from dracut-9999.ebuild.  There were just
  removed lines related to git repo and added patches from gentoo branch as
  separate files.

  09 Aug 2010; Amadeusz Żołnowski <aidecoe@aidecoe.name> dracut-9999.ebuild:
  New module and corresponding USE flag - gensplash - added.

  Updated run-time dependencies:
    - added media-gfx/splashutils for gensplash USE flag

  08 Aug 2010; Amadeusz Żołnowski <aidecoe@aidecoe.name> dracut-9999.ebuild:
  Removed keywords.

  06 Aug 2010; Amadeusz Żołnowski <aidecoe@aidecoe.name> dracut-9999.ebuild:
  New module and corresponding USE flag - bootchart - added.

  Updated run-time dependencies:
    - removed unnecessary sys-auth/nss-mdns
    - removed sys-boot/plymouth (no Plymouth ebuild yet)
    - added app-benchmarks/bootchart for bootchart USE flag

  Dracut doesn't need any dependencies in the build-time except of few to
  convert DocBook documents into the Unix man page format.  That's why all
  previous run-time dependencies were removed from DEPEND and added DocBook
  related.

*dracut-9999 (27 Jul 2010)
*dracut-006-r1 (27 Jul 2010)
*dracut-006 (27 Jul 2010)

  27 Jul 2010; Amadeusz Żołnowski <aidecoe@aidecoe.name> +dracut-006.ebuild,