@@ -19,6 +19,7 @@
 		<flag name="lvm">Add support for the Logical Volume Manager (sys-apps/lvm2)</flag>
 		<flag name="mdraid">Add support for MD devices, also known as software RAID devices</flag>
 		<flag name="multipath">Add support for Device Mapper multipathing</flag>
+		<flag name="plymouth">Add support for Plymouth splash</flag>
 		<flag name="nbd">Add support for network block devices</flag>
 		<flag name="nfs">Add support for NFS</flag>
 		<flag name="uswsusp">Add support for uswsusp (sys-power/suspend)</flag>
