@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  16 Aug 2010; Amadeusz Żołnowski <aidecoe@aidecoe.name> dracut-9999.ebuild,
+  metadata.xml:
+  Added plymouth dependency and USE flag.
+
 *dracut-007-r1 (16 Aug 2010)
 *dracut-006-r2 (16 Aug 2010)
 
